[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "themeparks"
version = "2.0.0"
description = "Official SDK for the ThemeParks.wiki API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ThemeParks.wiki contributors" }]
keywords = ["themeparks", "disney", "universal", "wait-times", "api"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
  "typing-extensions>=4.10",
  "eval-type-backport>=0.2; python_version < '3.10'",
]

[project.urls]
Homepage = "https://api.themeparks.wiki"
Source = "https://github.com/ThemeParks/ThemeParks_Python"
Issues = "https://github.com/ThemeParks/ThemeParks_Python/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-recording>=0.13",
  "ruff>=0.4",
  "mypy>=1.10",
  "datamodel-code-generator[http]>=0.25",
]
docs = [
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["themeparks"]

[tool.hatch.build.targets.sdist]
include = ["themeparks", "README.md", "LICENSE", "CHANGELOG.md", "MIGRATION.md"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "PL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "F401", "A004"]
"themeparks/_errors.py" = ["A001", "UP045"]
"themeparks/_transport.py" = ["A004"]
"themeparks/__init__.py" = ["A004"]
"themeparks/_generated/*.py" = ["N815", "F401"]

[tool.mypy]
python_version = "3.9"
strict = true
packages = ["themeparks"]
